# konbot

./: .env.sample  .gitignore  README.md  compose.yaml  kong.yaml  main.py  pyproject.toml
.github/workflows/: build-and-push.yaml
app/: Dockerfile  main.py  requirements.txt
app/test/: ai-semantic-cache-test.py
config/grafana/dashboards/default/: kong-ai-gateway.json
config/kong/: basic.yaml  kong.yaml  plugins-ai-aws-guardrails.yaml  plugins-ai-prompt-compressor.yaml  plugins-ai-prompt-guard.yaml  plugins-ai-proxy-advanced.yaml  plugins-ai-rate-limiting-advanced.yaml  plugins-ai-semantic-cache.yaml  plugins-ai-semantic-prompt-guard.yaml  pluhins-ai-prompt-compressor.yaml
config/otel-collector/: otel-collector-config.yaml
docs/: kong-rocket.txt
sample-docs/: brain-link-gorilla.json  gorilla-rocket.json  harmony-gorilla.json  quasar-gorilla.json
scripts/: 01_setup_vs.py  02_retrieve_doc.py
