[project]
name = "kong-openai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.26",
    "langchain-redis>=0.2.3",
    "openai>=1.91.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.0",
]
